# test_qt3d_geom

./: CMakeLists.txt  main.cpp  main.qml  mygeometry.cpp  mygeometry.h  mygeomtry2.cpp  mygeomtry2.h
